WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134215
Policy delegate methods should use CompletionHandlerCallChecker
https://bugs.webkit.org/show_bug.cgi?id=134215
Summary
Policy delegate methods should use CompletionHandlerCallChecker
Anders Carlsson
Reported
2014-06-23 14:38:16 PDT
Policy delegate methods should use CompletionHandlerCallChecker
Attachments
Patch
(3.06 KB, patch)
2014-06-23 14:38 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-06-23 14:38:57 PDT
Created
attachment 233637
[details]
Patch
WebKit Commit Bot
Comment 2
2014-06-23 14:40:23 PDT
Attachment 233637
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/NavigationState.mm:309: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/NavigationState.mm:371: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2014-06-23 14:40:30 PDT
Committed
r170322
: <
http://trac.webkit.org/changeset/170322
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug